<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!--Header text for the list of toppings [CHAR LIMIT = 20]-->
    <string name="toppings">Toppings</string>

    <string name="thank_you">Thank you!</string>

    <!--Name for the order summary. The username is not translated-->
    <string name="order_summary_name">Name: <xliff:g id = "name" example="Amy">%s</xliff:g></string>

    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="name">Name</string>

    <string name="add_wc">Add whipped cream: </string>
    <string name="add_c">Add chocolate: </string>
    <string name="total">Total: $ <xliff:g id="price" example="10">%d</xliff:g></string>
    <string name="email_title">Order for <xliff:g id = "name" example="Amy">%s</xliff:g></string>
</resources>
